- dmars: fixed subprojects
- don't escape \ in Python expressions
- fixed copy-files on Solaris (Michael Wetherell)
- added dependencies tracking for Sun CC (Michael Wetherell)
- msvc: fixed to work with free MS tools (Włodzimierz Skiba)
- new format: xcode2 for XCode project files (David Elliott)
- new format: symbian for Symbian tools (Włodzimierz Skiba)
- msevc4prj: support C++ exceptions


Version 0.1.8
-------------

- gnu: define PLATFORM_UNIX
- gnu: implemented dependencies tracking
- msvc*: use /EHsc instead of /GX, which is deprecated in VC8 (Vadim Zeitlin)
- added scripts for making Debian package (Vadim Zeitlin)
- gnu: fixed <module> targets to not have "lib" prefix in name
- added --quiet option
- gnu,mingw: fixed <threading>multi</threading> to use -pthread or -mthreads
  for compilation and not only linking


Version 0.1.7
-------------

- fixed running under Python 2.2 (Francesco Montorsi)
- fixed handling of "prepend" attribute on <set> command


Version 0.1.6
-------------

- autoconf: MetroWerks compiler support (David Elliott)
- fixed 'fake' preset to define <precomp-headers-location>
- workaround for a bug in aclocal that causes it to die when processing
  AC_BAKEFILE definition in bakefile.m4


Version 0.1.5
-------------

- new format: dmars_smake for DigitalMars's smake (Włodzimierz Skiba)
- msvc6prj, msevc4prj: change project names to be same as file names
- portability fix for datafiles module (Greg Noel)
- watcom: support <cxx-rtti> (Hans Van Leemputten)
- added <fragment> support to all makefile-based formats
- added category=path hint to options to make it possible to use options
  as argument to <include> etc.
- new format: gnu for GNU toolchain on Unix
- misc portability fixes on Unix (Michael Champigny)
- added BeOS support (thanks to information by Michael Champigny)
- improved performance when generating lots of makefiles using
  bakefile_gen by caching parsed XML files